# typojet

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: pages.yml  release.yml
data/: sample-documents.json
deploy/systemd/: typojet.service
site/: index.html  robots.txt  sitemap.xml  styles.css
src/: api.rs  config.rs  engine.rs  lib.rs  main.rs
tests/: api_tests.rs
