[package]
name = "typojet"
version = "0.1.0"
edition = "2024"
description = "Typo-tolerant Rust search engine by A A Hasnat for local apps and websites"
repository = "https://github.com/deadsec07/typojet"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
